second-part-done

--- a/style-a1.css/style.css
+++ b/style-a1.css/style.css
@@ -25,3 +25,37 @@
     background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Banner\ Image.png');
     margin: 50px 290px
 }
+
+/* section1 */
+
+.sale {
+    color: #F00;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 88px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.sale-msg1 {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.sale-msg2 {
+    color: #070211;
+    text-align: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    margin-top: 0px;
+}
+
+.pic1 {
+    display: block;
+    margin: auto;
+}
