--- a/style-a1.css/style.css
+++ b/style-a1.css/style.css
@@ -1,12 +1,13 @@
 /* header part */
-.main-header {
+ .main-header {
     text-align: center;
     font-family: 'Merriweather', serif;
     color: #FFF;
     font-size: 72px;
     font-weight: 900;
-    padding: 0px 344px 177px 344px;
-}
+    padding: 0px 344px 200px 344px;
+    margin-top: 0px;
+} 
 
 .small-header {
     text-align: center;
@@ -14,10 +15,12 @@
     color: #FFF;
     font-size: 32px;
     font-weight: 400;
-    padding-top: 233px;
+    padding-top: 200px;
+    margin-bottom: 0px;
 }
 
-.banner1 {
+.container{
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Banner\ Image.png');
     width: 1320px;
     height: 600px;
     flex-shrink: 0;
@@ -58,4 +61,46 @@
 .pic1 {
     display: block;
     margin: auto;
+}
+/* party section */
+.party{
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1320px;
+    height: 600px;
+    background:linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../resources/Vectorrr.png');
+    border-radius: 14px;
+    background-size: cover;
+    margin-left: 300px;
+    margin-top: 100px;
+}
+.banner-content{
+    text-align: left;
+    max-width: 600px;
+    padding: 20px;
+}
+.party-header{
+    width: 642px;
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+font-weight: 900;
+line-height: 88px; /* 137.5% */
+letter-spacing: 7.04px;
+}
+.party-description{
+    color: #FFFFFFCC;
+font-family: Inter;
+font-size: 18px;
+font-weight: 400;
+line-height: 30px;
+}
+#btn1{
+    color: #FFF;
+font-family: Inter;
+font-size: 20px;
+font-weight: 700;
+background-color: #F00;
 }
