--- a/style-a1.css/style.css
+++ b/style-a1.css/style.css
@@ -96,11 +96,67 @@ font-family: Inter;
 font-size: 18px;
 font-weight: 400;
 line-height: 30px;
-}
+} 
 #btn1{
     color: #FFF;
 font-family: Inter;
 font-size: 20px;
 font-weight: 700;
 background-color: #F00;
+}
+/* portfolio */
+.portfolio{
+    margin: 0px;
+    width: 1320px;
+   
+   margin-left: 300px;
+   margin-top: 100px;
+    align-items: center;
+    justify-content: center;
+}
+.heading1{
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+.main-port-heading{
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+      font-weight: 900;
+      margin-top: 10px;
+      margin-bottom: 0;
+  
+}
+.portfolio-description{
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px; 
+margin-top: 10px;
+}
+
+.port-img-sec1{
+    border-radius: 14px;
+    margin-top: 50px;
+}
+.rec3{
+    margin-right: 20px;
+}
+.rec5{
+    margin-left: 20px;
+}
+
+.port-img-sec2{
+    border-radius: 14px;
+    margin-top: 20px;
+}
+.rec6{
+    margin-right: 20px;
+}
+.rec8{
+    margin-left: 20px;
 }
