--- a/style-a1.css/style.css
+++ b/style-a1.css/style.css
@@ -359,7 +359,7 @@ hr {
 
 /* bonus part */
 .join-info {
-    width: 970px;
+    width: 940px;
     height: 482px;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     ;
@@ -478,4 +478,79 @@ hr {
     margin-top: 100px;
     margin-right: 110px;
     margin-left: 0px;
+}
+
+/* last part */
+.what {
+    text-align: center;
+    color: #070211;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 100px;
+}
+
+.holiday {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+    text-align: center;
+    margin-top: 16PX;
+}
+
+.holidays {
+    color: #F00;
+    text-align: center;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.sale-description {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    width: 1000px;
+    padding-left: 420px;
+    margin-top: 25px;
+}
+
+/* giftbox part */
+
+.gift-items {
+    display: flex;
+    justify-content: space-between;
+    width: 1370px;
+    height: 660px;
+    margin-left: 300px;
+    margin-top: 100px;
+
+    background-image: url('../resources/Rectangle\ 2.png'), url('../resources/Rectangle\ 1.png');
+    background-repeat: no-repeat, no-repeat;
+    background-position: bottom, top right;
+    background-size: 1420px 220px , 450px auto ;
+    border-radius: 16px;
+
+
+
+
+}
+
+/* .discount{
+    background-image: url('../resources/Rectangle\ 1.png');
+    background-position: top right;
+    background-repeat: no-repeat;
+    width: 429px;
+height: 433px;
+flex-shrink: 0;
+}
+    */
+
+.dis-img {
+    padding-top: 100px;
+    padding-right: 900px;
 }
